# boardgame-bot

./: .env.template  .gitignore  Dockerfile  db.py  docker-compose.yaml  importgames.py  main.py
.github/workflows/: build-archiver.yaml
src/: db.py  main.py  pyproject.toml
