[tool.poetry]
name = "boardgame-bot"
version = "0.1.0"
description = ""
authors = ["g-bolmida <gbolmida@georgebolmida.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
py-cord = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
